--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,16 @@ available in the app when your plugin is enabled.
 If your plugin does not need CSS, delete this file.
 
 */
+.question-text {
+	background-color: var(--background-primary);
+	padding: 12px;
+	border: 1px solid silver;
+	border-radius: 4px;
+	font-style: italic;
+}
 
 .possibleAnswer {
-	border: 1px solid var(--background-modifier-border);
+	border: 2px solid var(--background-modifier-border);
 	border-radius: var(--radius-s);
 	padding: 10px;
 
@@ -18,7 +25,7 @@ If your plugin does not need CSS, delete this file.
 }
 
 .possibleAnswer.selected {
-	background-color: var(--interactive-hover);
+	background-color: rgba(var(--color-blue-rgb), 0.5);
 }
 
 .possibleAnswer.correct {
@@ -51,5 +58,44 @@ If your plugin does not need CSS, delete this file.
 	flex-direction: column;
 	gap: 12px;
 	overflow: auto;
+}
+
+.difficulty {
+	padding: 2px 10px;
+	border-radius: 4px;
+	font-weight: bold;
+	margin: 4px 0;
+	width: max-content;
+}
+
+.difficulty.extreme {
+	background-color: rgba(var(--color-red-rgb), 0.8);
+}
+
+.difficulty.hard {
+	background-color: rgba(var(--color-orange-rgb), 0.8);
+}
+
+.difficulty.medium {
+	background-color: rgba(var(--color-yellow-rgb), 0.8);
+	color: black;
+}
+
+.difficulty.easy {
+	background-color: rgba(var(--color-green-rgb), 0.8);
+}
+
+.status {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-style: italic;
+}
+
+.status.text {
+	background-color: rgba(var(--color-blue-rgb), 0.6);
+	padding: 2px 10px;
+	border-radius: 4px;
+	font-style: normal;
 }
 
