--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,26 @@ If your plugin does not need CSS, delete this file.
 	border-top: 2px solid var(--background-modifier-border);
 }
 
-.stored-quiz-container {
+/* DASHBOARD */
+
+.dashboard-quizzes {
+	display: flex;
+	flex-direction: column;
+	gap: 12px;
+	overflow: auto;
+}
+
+.dashboard-empty-disclaimer {
+	width: -webkit-fill-available;
+	height: 500px;
+	display: flex;
+	flex-direction: column;
+	gap: 8px;
+	align-items: center;
+	justify-content: center;
+}
+
+.dashboard-item-container {
 	border: 3px solid var(--background-modifier-border);
 	border-radius: var(--radius-m);
 	padding: 12px;
@@ -49,63 +68,103 @@ If your plugin does not need CSS, delete this file.
 	transition: transform 0.15s ease, box-shadow 0.15s ease;
 }
 
-.stored-quiz-container:hover {
+.dashboard-item-container:hover {
 	border: 3px solid var(--interactive-hover);
 }
 
-.quiz-grid {
-	display: flex;
-	flex-direction: column;
-	gap: 12px;
-	overflow: auto;
-}
-
-.difficulty {
-	padding: 2px 10px;
-	border-radius: 4px;
-	font-weight: bold;
-	margin: 4px 0;
-	width: max-content;
-}
-
-.difficulty.extreme {
-	background-color: rgba(var(--color-red-rgb), 0.8);
-}
-
-.difficulty.hard {
-	background-color: rgba(var(--color-orange-rgb), 0.8);
-}
-
-.difficulty.medium {
-	background-color: rgba(var(--color-yellow-rgb), 0.8);
-	color: black;
-}
-
-.difficulty.easy {
-	background-color: rgba(var(--color-green-rgb), 0.8);
-}
-
-.status {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	font-style: italic;
-}
-
-.status.text {
+.dashboard-item-last-score {
 	background-color: rgba(var(--color-blue-rgb), 0.6);
 	padding: 2px 10px;
 	border-radius: 4px;
 	font-style: normal;
 }
 
-.empty-disclaimer {
-	width: -webkit-fill-available;
-	height: 500px;
+.difficulty {
+	border-radius: 4px;
+	font-weight: bold;
+	margin: 4px 0;
+	width: max-content;
+}
+
+/* PRE-GENERATION MODAL */
+
+.pre-gen-quiz-cost-estimate {
+	margin-top: 16px;
+}
+
+.pre-gen-buttons-container {
 	display: flex;
-	flex-direction: column;
+	justify-content: flex-end;
 	gap: 8px;
-	align-items: center;
+	margin-top: 36px
+}
+
+.pre-gen-disclaimer {
+	margin-top: 12px;
+	font-size: 0.9em;
+	color: var(--text-muted);
+}
+
+
+/* GENERIC STYLING SHORTCUTS */
+.flex-center {
+	display: flex;
 	justify-content: center;
+	align-items: center;
+}
+
+.flex-align-center {
+	display: flex;
+	align-items: center;
+}
+
+.flex-justify-end {
+	display: flex;
+	justify-content: flex-end;
+}
+
+.flex-justify-between {
+	display: flex;
+	justify-content: space-between;
+}
+
+.gap4 {
+	gap: 4px
+}
+
+.gap6 {
+	gap: 6px
+}
+
+.gap8 {
+	gap: 8px
+}
+
+.m-20 {
+	margin: 20px;
+}
+
+.ml-8 {
+	margin-left: 8px;
+}
+
+.mt36 {
+	margin-top: 36px;
+}
+
+.m-sides-20 {
+	margin: 0 20px;
+}
+
+.p-sides-20 {
+	padding: 0 20px;
+}
+
+.bg-purple {
+	background-color: var(--color-purple);
+}
+
+.font-italic {
+	font-style: italic;
 }
 
