--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,3 @@
-/*
-
-This CSS file will be included with your plugin, and
-available in the app when your plugin is enabled.
-
-If your plugin does not need CSS, delete this file.
-
-*/
 .question-text {
 	background-color: var(--background-primary);
 	padding: 12px;
@@ -86,6 +78,61 @@ If your plugin does not need CSS, delete this file.
 	width: max-content;
 }
 
+/* Quiz editing */
+.quiz-edit-questions-container {
+	display: flex;
+	flex-direction: column;
+	gap: 8px;
+}
+
+.quiz-edit-question-item {
+	border: 1px solid var(--background-modifier-border);
+	border-radius: 4px;
+	padding: 12px 20px;
+}
+
+.quiz-edit-question-item:hover {
+	background-color: var(--background-modifier-border);
+}
+
+.question-edit-container {
+	display: flex;
+	flex-direction: column;
+	gap: 8px;
+	width: -webkit-fill-available;
+	margin-left: 20px;
+	padding-left: 20px;
+	border-left: 1px solid var(--background-modifier-border);
+}
+
+.quiz-edit-section {
+	display: flex;
+	width: 100%;
+	flex-direction: column;
+	gap: 8px;
+	margin-bottom: 12px;
+}
+
+.quiz-edit-textarea {
+	width: 100%;
+}
+
+.quiz-edit-answer-row {
+	display: flex;
+	align-items: center;
+	gap: 8px;
+}
+
+.quiz-edit-answer-input {
+	width: -webkit-fill-available;
+}
+
+.quiz-modal {
+	transition:
+		--modal-width 200ms ease,
+		width 200ms ease;
+}
+
 /* PRE-GENERATION MODAL */
 
 .pre-gen-quiz-cost-estimate {
@@ -128,15 +175,15 @@ If your plugin does not need CSS, delete this file.
 	justify-content: space-between;
 }
 
-.gap4 {
+.gap-4 {
 	gap: 4px
 }
 
-.gap6 {
+.gap-6 {
 	gap: 6px
 }
 
-.gap8 {
+.gap-8 {
 	gap: 8px
 }
 
@@ -148,7 +195,7 @@ If your plugin does not need CSS, delete this file.
 	margin-left: 8px;
 }
 
-.mt36 {
+.mt-36 {
 	margin-top: 36px;
 }
 
